--- a/app/views/sells/show.html.erb
+++ b/app/views/sells/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <strong>Empresa:</strong>
-  <%= @sell.company %>
+  <%= @sell.company.name %>
 </p>
 
 <p>
   <strong>Usuário:</strong>
-  <%= @sell.user %>
+  <%= @sell.user.email %>
 </p>
 
 <p>
   <strong>Produto:</strong>
-  <%= @sell.product %>
+  <%= @sell.product.name %>
 </p>
 
 <p>
