--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% if user_signed_in? %>
   <header class="navbar navbar-fixed-top navbar-default" role="navigation">
     <nav class="navbar-inner">
       <div class="container">
@@ -23,7 +23,6 @@
           <a href="/welcomes/index" class="navbar-brand">Seicho Books</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapsable">
-          <% if user_signed_in? %>
           <ul class="nav navbar-nav foo" id="menu">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cadastros <b class="caret"></b></a>
@@ -59,7 +58,7 @@
               </li>
               <% else %>
               <li>
-                <%= link_to('Login', new_user_session_path)  %>
+                <%#= link_to('Login', new_user_session_path)  %>
               </li>
               <% end %>
             </li>
