--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
             <li><%= link_to 'Nova Ideia', '#' %></li>
             <!--<li><%= link_to 'Contato', contacts_path %></li>-->
             <li>
-              <a href="/contacts/index">
+              <a href="/contacts">
                 <span class='glyphicon glyphicon-hand-right'></span>
                 Contato!
               </a>
