--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -12,6 +12,7 @@
     <% @companies.each do |company| %>
       <tr>
         <td><%= company.name %></td>
+        <td><%= link_to 'Show', company %></td>
         <td><%= link_to 'Editar', edit_company_path(company) %></td>
         <td><%= link_to 'Excluir', company, method: :delete, data: { confirm: 'Excluir empresa: ' + company.name + '?' } %></td>
       </tr>
